tests/valid/literals/booleans.nyx
// Boolean literals
func booleans() -> ok
    let t = true
    let f = false
    let condition = true
    let flag = false
    pass
