tests/invalid/syntax/assign_to_literal.nyx
// Invalid: Assignment to literal value
func assign_to_literal() -> ok
    5 = 10
    pass
